# Nmap Changelog ($Id$); -*-text-*-

o Added a new <target> element to XML output that indicates when a
  target specification was ignored, perhaps because of a syntax error
  or DNS failure. It looks like this:
    <target specification="1.2.3.4.5" status="skipped" reason="invalid"/>
  [David Fifield]

o [NSE] Added the script mmouse-exec that connects to a Mobile Mouse server,
  starts an application, and sends a sequence of keystrokes to it. [Patrik
  Karlsson]

o [NSE] Added the script mmouse-brute that performs brute force password
  auditing against the Mobile Mouse service. [Patrik Karlsson]

o [NSE] Added the script cups-queue-info that lists the contents of a remote
  CUPS printer queue. [Patrik Karlsson]

o [NSE] Added the script ip-forwarding that detects devices that have IP
  forwarding enabled (acting as routers). [Patrik Karlsson]

o [NSE] Added the script samba-vuln-cve-2012-1182 which detects the SAMBA CVE
  2012-1182 vulnerability. [Aleksandar Nikolic]

o [NSE] Added the script dns-check-zone that checks DNS configuration against
  best practices including RFC 1912. [Patrik Karlsson]

o [NSE] Added the http-gitweb-projects-enum that queries a gitweb for a list
  of Git projects, their authors and descriptions. [riemann]

o [NSE] targets-sniffer now is capable of sniffing IPv6 addresses.
  [Daniel Miller]

o [NSE] Added the script traceroute-geolocation that queries geographic
  locations of each traceroute hop and allows to export the results to KLM,
  allowing the hops to be plotted on a map. [Patrik Karlsson]

o [NSE] Added the ipp library and the script cups-info that lists available
  printers by querying the cups network daemon. [Patrik Karlsson]

o [NSE] Added the mobilme library and the scripts http-icloud-findmyiphone and
  http-icloud-sendmsg, that finds the location of iOS devices and provides
  functionality to send them messages. [Patrik Karlsson]

o [NSE] Added gps library and the gpsd-info script that collects GPS data